src/CedilleParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from CedilleParser.y
-----------------------------------------------------------------------------

state 12 contains 1 shift/reduce conflicts.
state 61 contains 1 shift/reduce conflicts.
state 201 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_cedilleParser -> Start                      (0)
	%start_types -> Type                               (1)
	%start_term -> Term                                (2)
	%start_maybetype -> MaybeCheckType                 (3)
	%start_deftermtype -> DefTermOrType                (4)
	%start_cmd -> Cmd                                  (5)
	%start_liftingtype -> LiftingType                  (6)
	Start -> Imports 'module' Qvar Params '.' Cmds LineNo   (7)
	Imprt -> 'import' Fpth OptAs Args '.'              (8)
	OptAs ->                                           (9)
	OptAs -> 'as' var                                  (10)
	Imports ->                                         (11)
	Imports -> Imprt Imports                           (12)
	Cmds ->                                            (13)
	Cmds -> Cmd Cmds                                   (14)
	Cmd -> Imprt                                       (15)
	Cmd -> DefTermOrType '.'                           (16)
	Cmd -> kvar Params '=' Kind '.'                    (17)
	MaybeCheckType ->                                  (18)
	MaybeCheckType -> '◂' Type                         (19)
	Params ->                                          (20)
	Params -> Decl Params                              (21)
	DefTermOrType -> var MaybeCheckType '=' Term       (22)
	DefTermOrType -> var '◂' Kind '=' Type             (23)
	Decl -> '(' Bvar ':' Tk ')'                        (24)
	Theta -> 'θ'                                       (25)
	Theta -> 'θ+'                                      (26)
	Theta -> 'θ<' Vars '>'                             (27)
	Vars -> var                                        (28)
	Vars -> var Vars                                   (29)
	Rho -> 'ρ'                                         (30)
	Rho -> 'ρ+'                                        (31)
	OptTerm ->                                         (32)
	OptTerm -> '{' Term '}'                            (33)
	Term -> Lam Bvar OptClass '.' Term                 (34)
	Term -> 'let' DefTermOrType 'in' Term              (35)
	Term -> Theta Lterm Lterms                         (36)
	Term -> Aterm                                      (37)
	Aterm -> Aterm Lterm                               (38)
	Aterm -> Aterm '-' Lterm                           (39)
	Aterm -> Aterm '·' Atype                           (40)
	Aterm -> Lterm                                     (41)
	Lterm -> 'β' OptTerm                               (42)
	Lterm -> 'ε' Lterm                                 (43)
	Lterm -> 'ε-' Lterm                                (44)
	Lterm -> 'εl' Lterm                                (45)
	Lterm -> 'εl-' Lterm                               (46)
	Lterm -> 'εr' Lterm                                (47)
	Lterm -> 'εr-' Lterm                               (48)
	Lterm -> 'ς' Lterm                                 (49)
	Lterm -> Rho Lterm '-' Lterm                       (50)
	Lterm -> 'χ' MaybeAtype '-' Lterm                  (51)
	Lterm -> Pterm                                     (52)
	Pterm -> Qvar                                      (53)
	Pterm -> '(' Term ')'                              (54)
	Pterm -> Pterm '.num'                              (55)
	Pterm -> '[' Term ',' Term OptTerm ']'             (56)
	Pterm -> '●'                                       (57)
	MaybeAtype -> Atype                                (58)
	MaybeAtype ->                                      (59)
	Lterms -> LineNo                                   (60)
	Lterms -> Lterm Lterms                             (61)
	Lterms -> '-' Lterm Lterms                         (62)
	OptClass ->                                        (63)
	OptClass -> ':' Tk                                 (64)
	OptType ->                                         (65)
	OptType -> ':' Type                                (66)
	Lam -> 'Λ'                                         (67)
	Lam -> 'λ'                                         (68)
	Type -> 'Π' Bvar ':' Tk '.' Type                   (69)
	Type -> '∀' Bvar ':' Tk '.' Type                   (70)
	Type -> 'λ' Bvar ':' Tk '.' Type                   (71)
	Type -> 'ι' Bvar OptType '.' Type                  (72)
	Type -> LType '➾' Type                             (73)
	Type -> LType '➔' Type                             (74)
	Type -> LType                                      (75)
	Type -> '{^' Type '^}'                             (76)
	Type -> '{' Term '≃' Term '}'                      (77)
	LType -> '↑' var '.' Term ':' LliftingType         (78)
	LType -> LType '·' Atype                           (79)
	LType -> LType Lterm                               (80)
	LType -> Atype                                     (81)
	Atype -> '(' Type ')'                              (82)
	Atype -> Qvar                                      (83)
	Atype -> '●'                                       (84)
	Arg -> Lterm                                       (85)
	Arg -> '·' Atype                                   (86)
	Args -> LineNo                                     (87)
	Args -> Arg Args                                   (88)
	Kind -> 'Π' Bvar ':' Tk '.' Kind                   (89)
	Kind -> LKind '➔' Kind                             (90)
	Kind -> LType '➔' Kind                             (91)
	Kind -> LKind                                      (92)
	LKind -> '★'                                       (93)
	LKind -> '(' Kind ')'                              (94)
	LKind -> qkvar Args                                (95)
	LiftingType -> 'Π' Bvar ':' Type '.' LiftingType   (96)
	LiftingType -> LliftingType '➔' LiftingType        (97)
	LiftingType -> Type '➔' LiftingType                (98)
	LiftingType -> LliftingType                        (99)
	LliftingType -> '☆'                                (100)
	LliftingType -> '(' LiftingType ')'                (101)
	Tk -> Type                                         (102)
	Tk -> Kind                                         (103)
	Bvar -> '_'                                        (104)
	Bvar -> var                                        (105)
	Qvar -> var                                        (106)
	Qvar -> qvar                                       (107)
	Fpth -> fpth                                       (108)
	Fpth -> var                                        (109)
	LineNo ->                                          (110)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	var            { Token _ (TVar _) }
	qvar           { Token _ (TQvar _) }
	kvar           { Token _ (TKvar _) }
	qkvar          { Token _ (TQKvar _) }
	fpth           { Token _ (TFpth _) }
	'.num'         { Token _ (TProj _) }
	'ε'            { Token $$ TEps }
	'ε-'           { Token $$ TEpsM }
	'εl'           { Token $$ TEpsL }
	'εl-'          { Token $$ TEpsLM }
	'εr'           { Token $$ TEpsR }
	'εr-'          { Token $$ TEpsRM }
	'import'       { Token $$ TImport }
	'module'       { Token $$ TModule }
	'as'           { Token $$ TAs }
	'let'          { Token $$ TLet }
	'in'           { Token $$ TIn }
	'{^'           { Token $$ TLSpan }
	'^}'           { Token $$ TRSpan }
	'θ'            { Token $$ TTheta }
	'θ+'           { Token $$ TThetaEq }
	'θ<'           { Token $$ TThetaVars }
	'ρ'            { Token $$ TRhoPlain }
	'ρ+'           { Token $$ TRhoPlus }
	'='            { Token $$ (TSym "=") }
	'>'            { Token $$ (TSym ">") }
	'_'            { Token _  (TSym "_") }
	'.'            { Token $$ (TSym ".") }
	'('            { Token $$ (TSym "(") }
	')'            { Token $$ (TSym ")") }
	'['            { Token $$ (TSym "[") }
	']'            { Token $$ (TSym "]") }
	','            { Token $$ (TSym ",") }
	'{'            { Token $$ (TSym "{") }
	'}'            { Token $$ (TSym "}") }
	':'            { Token $$ (TSym ":") }
	'Π'            { Token $$ (TSym "Π") }
	'∀'            { Token $$ (TSym "∀") }
	'λ'            { Token $$ (TSym "λ") }
	'Λ'            { Token $$ (TSym "Λ") }
	'ι'            { Token $$ (TSym "ι") }
	'↑'            { Token $$ (TSym "↑") }
	'β'            { Token $$ (TSym "β") }
	'·'            { Token $$ (TSym "·") }
	'-'            { Token $$ (TSym "-") }
	'ς'            { Token $$ (TSym "ς") }
	'χ'            { Token $$ (TSym "χ") }
	'➾'            { Token $$ (TSym "➾") }
	'➔'            { Token $$ (TSym "➔") }
	'≃'            { Token $$ (TSym "≃") }
	'◂'            { Token $$ (TSym "◂") }
	'●'            { Token $$ (TSym "●") }
	'☆'            { Token $$ (TSym "☆") }
	'★'            { Token $$ (TSym "★") }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_cedilleParser rule  0
	%start_types    rule  1
	%start_term     rule  2
	%start_maybetype rule  3
	%start_deftermtype rule  4
	%start_cmd      rule  5
	%start_liftingtype rule  6
	Start           rule  7
	Imprt           rule  8
	OptAs           rules 9, 10
	Imports         rules 11, 12
	Cmds            rules 13, 14
	Cmd             rules 15, 16, 17
	MaybeCheckType  rules 18, 19
	Params          rules 20, 21
	DefTermOrType   rules 22, 23
	Decl            rule  24
	Theta           rules 25, 26, 27
	Vars            rules 28, 29
	Rho             rules 30, 31
	OptTerm         rules 32, 33
	Term            rules 34, 35, 36, 37
	Aterm           rules 38, 39, 40, 41
	Lterm           rules 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52
	Pterm           rules 53, 54, 55, 56, 57
	MaybeAtype      rules 58, 59
	Lterms          rules 60, 61, 62
	OptClass        rules 63, 64
	OptType         rules 65, 66
	Lam             rules 67, 68
	Type            rules 69, 70, 71, 72, 73, 74, 75, 76, 77
	LType           rules 78, 79, 80, 81
	Atype           rules 82, 83, 84
	Arg             rules 85, 86
	Args            rules 87, 88
	Kind            rules 89, 90, 91, 92
	LKind           rules 93, 94, 95
	LiftingType     rules 96, 97, 98, 99
	LliftingType    rules 100, 101
	Tk              rules 102, 103
	Bvar            rules 104, 105
	Qvar            rules 106, 107
	Fpth            rules 108, 109
	LineNo          rule  110

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'import'       shift, and enter state 10
	'module'       reduce using rule 11

	Start          goto state 68
	Imprt          goto state 8
	Imports        goto state 9

State 1


	var            shift, and enter state 17
	qvar           shift, and enter state 18
	'{^'           shift, and enter state 19
	'('            shift, and enter state 66
	'{'            shift, and enter state 21
	'Π'            shift, and enter state 67
	'∀'            shift, and enter state 23
	'λ'            shift, and enter state 24
	'ι'            shift, and enter state 25
	'↑'            shift, and enter state 26
	'●'            shift, and enter state 27

	Type           goto state 65
	LType          goto state 12
	Atype          goto state 13
	Qvar           goto state 16

State 2


	var            shift, and enter state 17
	qvar           shift, and enter state 18
	'ε'            shift, and enter state 45
	'ε-'           shift, and enter state 46
	'εl'           shift, and enter state 47
	'εl-'          shift, and enter state 48
	'εr'           shift, and enter state 49
	'εr-'          shift, and enter state 50
	'let'          shift, and enter state 51
	'θ'            shift, and enter state 52
	'θ+'           shift, and enter state 53
	'θ<'           shift, and enter state 54
	'ρ'            shift, and enter state 55
	'ρ+'           shift, and enter state 56
	'('            shift, and enter state 57
	'['            shift, and enter state 58
	'λ'            shift, and enter state 59
	'Λ'            shift, and enter state 60
	'β'            shift, and enter state 61
	'ς'            shift, and enter state 62
	'χ'            shift, and enter state 63
	'●'            shift, and enter state 64

	Theta          goto state 37
	Rho            goto state 38
	Term           goto state 39
	Aterm          goto state 40
	Lterm          goto state 41
	Pterm          goto state 42
	Lam            goto state 43
	Qvar           goto state 44

State 3


	'◂'            shift, and enter state 36
	%eof           reduce using rule 18

	MaybeCheckType goto state 35

State 4


	var            shift, and enter state 32

	DefTermOrType  goto state 34

State 5


	var            shift, and enter state 32
	kvar           shift, and enter state 33
	'import'       shift, and enter state 10

	Imprt          goto state 29
	Cmd            goto state 30
	DefTermOrType  goto state 31

State 6


	var            shift, and enter state 17
	qvar           shift, and enter state 18
	'{^'           shift, and enter state 19
	'('            shift, and enter state 20
	'{'            shift, and enter state 21
	'Π'            shift, and enter state 22
	'∀'            shift, and enter state 23
	'λ'            shift, and enter state 24
	'ι'            shift, and enter state 25
	'↑'            shift, and enter state 26
	'●'            shift, and enter state 27
	'☆'            shift, and enter state 28

	Type           goto state 11
	LType          goto state 12
	Atype          goto state 13
	LiftingType    goto state 14
	LliftingType   goto state 15
	Qvar           goto state 16

State 7


	'import'       shift, and enter state 10

	Imprt          goto state 8
	Imports        goto state 9

State 8

	Imports -> Imprt . Imports                          (rule 12)

	'import'       shift, and enter state 10
	'module'       reduce using rule 11

	Imprt          goto state 8
	Imports        goto state 122

State 9

	Start -> Imports . 'module' Qvar Params '.' Cmds LineNo    (rule 7)

	'module'       shift, and enter state 121


State 10

	Imprt -> 'import' . Fpth OptAs Args '.'             (rule 8)

	var            shift, and enter state 119
	fpth           shift, and enter state 120

	Fpth           goto state 118

State 11

	LiftingType -> Type . '➔' LiftingType               (rule 98)

	'➔'            shift, and enter state 117


State 12

	Type -> LType . '➾' Type                            (rule 73)
	Type -> LType . '➔' Type                            (rule 74)
	Type -> LType .                                     (rule 75)
	LType -> LType . '·' Atype                          (rule 79)
	LType -> LType . Lterm                              (rule 80)

	var            shift, and enter state 17
	qvar           shift, and enter state 18
	'ε'            shift, and enter state 45
	'ε-'           shift, and enter state 46
	'εl'           shift, and enter state 47
	'εl-'          shift, and enter state 48
	'εr'           shift, and enter state 49
	'εr-'          shift, and enter state 50
	'in'           reduce using rule 75
	'^}'           reduce using rule 75
	'ρ'            shift, and enter state 55
	'ρ+'           shift, and enter state 56
	'='            reduce using rule 75
	'.'            reduce using rule 75
	'('            shift, and enter state 57
	')'            reduce using rule 75
	'['            shift, and enter state 58
	'β'            shift, and enter state 61
	'·'            shift, and enter state 114
	'ς'            shift, and enter state 62
	'χ'            shift, and enter state 63
	'➾'            shift, and enter state 115
	'➔'            shift, and enter state 116
			(reduce using rule 75)

	'●'            shift, and enter state 64
	%eof           reduce using rule 75

	Rho            goto state 38
	Lterm          goto state 113
	Pterm          goto state 42
	Qvar           goto state 44

State 13

	LType -> Atype .                                    (rule 81)

	var            reduce using rule 81
	qvar           reduce using rule 81
	'ε'            reduce using rule 81
	'ε-'           reduce using rule 81
	'εl'           reduce using rule 81
	'εl-'          reduce using rule 81
	'εr'           reduce using rule 81
	'εr-'          reduce using rule 81
	'in'           reduce using rule 81
	'^}'           reduce using rule 81
	'ρ'            reduce using rule 81
	'ρ+'           reduce using rule 81
	'='            reduce using rule 81
	'.'            reduce using rule 81
	'('            reduce using rule 81
	')'            reduce using rule 81
	'['            reduce using rule 81
	'β'            reduce using rule 81
	'·'            reduce using rule 81
	'ς'            reduce using rule 81
	'χ'            reduce using rule 81
	'➾'            reduce using rule 81
	'➔'            reduce using rule 81
	'●'            reduce using rule 81
	%eof           reduce using rule 81


State 14

	%start_liftingtype -> LiftingType .                 (rule 6)

	%eof           accept


State 15

	LiftingType -> LliftingType . '➔' LiftingType       (rule 97)
	LiftingType -> LliftingType .                       (rule 99)

	')'            reduce using rule 99
	'➔'            shift, and enter state 112
	%eof           reduce using rule 99


State 16

	Atype -> Qvar .                                     (rule 83)

	var            reduce using rule 83
	qvar           reduce using rule 83
	'ε'            reduce using rule 83
	'ε-'           reduce using rule 83
	'εl'           reduce using rule 83
	'εl-'          reduce using rule 83
	'εr'           reduce using rule 83
	'εr-'          reduce using rule 83
	'in'           reduce using rule 83
	'^}'           reduce using rule 83
	'ρ'            reduce using rule 83
	'ρ+'           reduce using rule 83
	'='            reduce using rule 83
	'.'            reduce using rule 83
	'('            reduce using rule 83
	')'            reduce using rule 83
	'['            reduce using rule 83
	']'            reduce using rule 83
	','            reduce using rule 83
	'{'            reduce using rule 83
	'}'            reduce using rule 83
	':'            reduce using rule 83
	'β'            reduce using rule 83
	'·'            reduce using rule 83
	'-'            reduce using rule 83
	'ς'            reduce using rule 83
	'χ'            reduce using rule 83
	'➾'            reduce using rule 83
	'➔'            reduce using rule 83
	'≃'            reduce using rule 83
	'●'            reduce using rule 83
	%eof           reduce using rule 83


State 17

	Qvar -> var .                                       (rule 106)

	var            reduce using rule 106
	qvar           reduce using rule 106
	'.num'         reduce using rule 106
	'ε'            reduce using rule 106
	'ε-'           reduce using rule 106
	'εl'           reduce using rule 106
	'εl-'          reduce using rule 106
	'εr'           reduce using rule 106
	'εr-'          reduce using rule 106
	'in'           reduce using rule 106
	'^}'           reduce using rule 106
	'ρ'            reduce using rule 106
	'ρ+'           reduce using rule 106
	'='            reduce using rule 106
	'.'            reduce using rule 106
	'('            reduce using rule 106
	')'            reduce using rule 106
	'['            reduce using rule 106
	']'            reduce using rule 106
	','            reduce using rule 106
	'{'            reduce using rule 106
	'}'            reduce using rule 106
	':'            reduce using rule 106
	'β'            reduce using rule 106
	'·'            reduce using rule 106
	'-'            reduce using rule 106
	'ς'            reduce using rule 106
	'χ'            reduce using rule 106
	'➾'            reduce using rule 106
	'➔'            reduce using rule 106
	'≃'            reduce using rule 106
	'●'            reduce using rule 106
	%eof           reduce using rule 106


State 18

	Qvar -> qvar .                                      (rule 107)
